examples/valid/condition.mc
int x = 7;
bool positive;

positive = x > 0;

if (positive) {
    print("positive");
} else {
    print("not positive");
}
