examples/invalid/bad_condition.mc
int x = 1;

if (x) {
    print("bad");
}
